# bh-sentinel-examples

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: real_world_corpus.yaml
data/clinical_fixtures/: intake_examples.yaml
examples/: 01_quick_start.py  02_full_pipeline.py  03_batch_corpus.py  04_container_offline.py
reports/: l1_vs_l2_ml_0_2_2.md  sample_l1_vs_l2.md
scripts/: download_model.sh  run_eval.py
tests/: test_smoke.py
